--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_hash_map.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_hash_map.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/slide_exit_layout_array_list_activity"
+    android:id="@+id/slide_exit_layout_hash_map_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/White"
     app:columnCount="2">
 
+
     <android.support.v7.widget.CardView
-        android:id="@+id/card_features_array_list"
+        android:id="@+id/card_features_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -31,7 +32,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_to_string_array_list"
+        android:id="@+id/card_to_string_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -55,7 +56,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_add_array_list"
+        android:id="@+id/card_add_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -79,7 +80,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_remove_array_list"
+        android:id="@+id/card_remove_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -103,7 +104,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_set_array_list"
+        android:id="@+id/card_set_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -127,7 +128,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_get_array_list"
+        android:id="@+id/card_get_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -151,7 +152,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_go_through_array_list"
+        android:id="@+id/card_go_through_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -174,7 +175,30 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_go_through_by_iterator_array_list"
+        android:id="@+id/card_go_through_by_entry_set_hash_map"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:minHeight="100dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true"
+        app:layout_columnWeight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/go_through_by_entry_set"
+            android:textColor="@color/text_color_black"
+            android:textSize="16sp" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_go_through_by_iterator_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -197,7 +221,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_go_through_by_list_iterator_array_list"
+        android:id="@+id/card_go_through_by_list_iterator_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -221,7 +245,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_clear_array_list"
+        android:id="@+id/card_clear_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -245,7 +269,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_sort_array_list"
+        android:id="@+id/card_sort_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -269,7 +293,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_multi_thread_array_list"
+        android:id="@+id/card_multi_thread_hash_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
