--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_fragment_back_stack.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_fragment_back_stack.xml
@@ -2,44 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Grey_Material_Design_400_saturation"
     android:orientation="vertical">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btn_jump_next_fragment"
-                android:text="@string/jump"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_print_fragment_stack"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/print_stack" />
 
-            <Button
-                android:id="@+id/btn_jump_back_fragment"
-                android:text="@string/jump_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_jump_next_fragment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/jump" />
 
-            <Button
-                android:id="@+id/btn_print_fragment_stack"
-                android:text="@string/print_stack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_jump_back_fragment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/jump_back" />
 
-        </LinearLayout>
 
-    </HorizontalScrollView>
+        <CheckBox
+            android:id="@+id/toggle_with_extras"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/with_extras" />
 
+
+    </LinearLayout>
 
 
     <FrameLayout
         android:id="@+id/fragment_container_fragment_back_stack"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
