--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_collection.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_collection.xml
@@ -188,6 +188,30 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/card_hash_table"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:minHeight="100dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp"
+                app:cardPreventCornerOverlap="false"
+                app:cardUseCompatPadding="true"
+                app:layout_columnWeight="1"
+                app:layout_rowWeight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/hash_table"
+                    android:textColor="@color/text_color_black"
+                    android:textSize="16sp" />
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:id="@+id/card_linked_hash_map"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
