--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_handler.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_handler.xml
@@ -10,9 +10,8 @@
         app:columnCount="2">
 
 
-
         <android.support.v7.widget.CardView
-            android:id="@+id/card_empty_message_to_ui_thread"
+            android:id="@+id/card_send_empty_message_to_ui_thread"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
@@ -29,16 +28,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/hash_map"
+                android:text="@string/send_empty_message_to_ui_thread"
                 android:textColor="@color/text_color_black"
                 android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
 
 
-
         <android.support.v7.widget.CardView
-            android:id="@+id/card_message_with_what_to_ui_thread"
+            android:id="@+id/card_send_message_with_what_to_ui_thread"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
@@ -55,7 +53,79 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/hash_map"
+                android:text="@string/send_message_with_what_to_ui_thread"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_send_message_with_args1_args2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:minHeight="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/send_message_with_args1_args2_to_ui_thread"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_send_message_with_object_to_ui_thread"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:minHeight="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/send_message_with_object_to_ui_thread"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_send_message_with_runnable_to_ui_thread"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:minHeight="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/send_message_with_runnable_to_ui_thread"
                 android:textColor="@color/text_color_black"
                 android:textSize="16sp" />
 
