--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_calculator.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_calculator.xml
@@ -8,14 +8,15 @@
 
     <TextView
         android:id="@+id/txt_result"
-        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|right"
         android:minHeight="100dp"
+        android:padding="10dp"
         android:text="@string/zero"
         android:textColor="@color/text_color_gray"
-        android:textSize="24sp" />
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
@@ -42,7 +43,8 @@
                 android:gravity="center"
                 android:text="@string/one"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -65,7 +67,8 @@
                 android:gravity="center"
                 android:text="@string/two"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -88,7 +91,8 @@
                 android:gravity="center"
                 android:text="@string/three"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -111,7 +115,8 @@
                 android:gravity="center"
                 android:text="@string/addition"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -134,7 +139,8 @@
                 android:gravity="center"
                 android:text="@string/clear_calculator"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -158,7 +164,8 @@
                 android:gravity="center"
                 android:text="@string/four"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -181,7 +188,8 @@
                 android:gravity="center"
                 android:text="@string/five"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -204,7 +212,8 @@
                 android:gravity="center"
                 android:text="@string/six"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -227,7 +236,8 @@
                 android:gravity="center"
                 android:text="@string/subtraction"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -251,7 +261,8 @@
                 android:gravity="center"
                 android:text="@string/membrane"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -274,7 +285,8 @@
                 android:gravity="center"
                 android:text="@string/seven"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -297,7 +309,8 @@
                 android:gravity="center"
                 android:text="@string/eight"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -320,7 +333,8 @@
                 android:gravity="center"
                 android:text="@string/nine"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -343,7 +357,8 @@
                 android:gravity="center"
                 android:text="@string/multiplication"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -367,7 +382,8 @@
                 android:gravity="center"
                 android:text="@string/equal"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -391,7 +407,8 @@
                 android:gravity="center"
                 android:text="@string/zero"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -414,7 +431,8 @@
                 android:gravity="center"
                 android:text="@string/dot"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
@@ -437,7 +455,8 @@
                 android:gravity="center"
                 android:text="@string/division"
                 android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
