--- a/CommonLibProject/CommonUtils/src/main/res/values/style.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/style.xml
@@ -81,6 +81,20 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <style name="CommonCardButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+        <item name="android:minHeight">100dp</item>
+    </style>
 
+    <style name="CommonCardText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/text_color_black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 
 </resources>
